# discord-macros-rs

./: Cargo.toml  LICENSE
discord-macros/: Cargo.toml
discord-macros-common/: Cargo.toml
discord-macros-common/src/api_definitions/application_command/: contexts.rs  mod.rs  permissions.rs
discord-macros-common/src/api_definitions/application_command/option/: channel_types.rs  mod.rs  option_type.rs
discord-macros-derive/: Cargo.toml
discord-macros-derive/src/: lib.rs
discord-macros-derive/src/application_command/: mod.rs
discord-macros-derive/src/application_command/parse/: fields.rs  global_attributes.rs  mod.rs
discord-macros-derive/src/application_command/parse/types/: choices.rs  command_groups.rs  minmax.rs  mod.rs  num_limiter.rs  strings.rs  subcommand_paths.rs  utils.rs
discord-macros-derive/src/extensions/: darling_err.rs  mod.rs
discord-macros-derive/src/utils/: meta_struct.rs  mod.rs  spanned_value.rs
discord-macros/src/: lib.rs
