[package]
name = "discord-macros-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
discord-macros-common = { path = "../discord-macros-common", features = ["derive"] }
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
darling.workspace = true
ahash.workspace = true
serde_json.workspace = true
bitflags.workspace = true
strsim.workspace = true
const_format.workspace = true